<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

        <EditText
            android:id="@+id/name"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="40dp"
            android:hint="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

        <CheckBox
            android:textSize="24sp"
            android:id="@+id/whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:textSize="24sp"
            android:id="@+id/choclate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate" />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minus"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/minus" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/num"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:id="@+id/plus"/>


    </LinearLayout>
    <TextView
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <TextView
        android:textSize="26sp"
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"/>
    <Button
        android:id="@+id/order"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="30sp"
        />
        </LinearLayout>
</ScrollView>